--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div class="content">
     <h2>Hello and Welcome! <br> My name is Ana! </h2>
       <p>I'm a becoming Web Developer. <br> This is my first website.</p>
+      <p>Yes, you are! <br> Your mentor believes in you!</p>
       <a href="/contact.html">About me</a>
   </div>
 <footer>
