I added a css class and a button to index.hml

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 </head>
 <body>
   <h5> About me </h5>
+  <button class="button">Empty Button</button>
   <div class="header">
   </div>
   <div class="content">
     <h2>Hello and Welcome! <br> My name is Ana! </h2>
       <p>I'm a becoming Web Developer. <br> This is my first website.</p>
       <p>Yes, you are! <br> Your mentor believes in you!</p>
-      <a href="/contact.html">About me</a>
+      <a href="./contact.html">About me</a>
   </div>
 <footer>
   <p>About me, Copyright &copy 2021</p>
