simple modificari pentru testare personala

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   </div>
  <div class="content">
   <h1> About me. </h1>
-  <p>Hey this is me, Ana, 32 years old, mother of two boys.I'm from Republica Moldova, but for the moment i live in Italy. <br> I have a typical mother life. I <strong>love</strong> my life, but i needed to do something for myself. <br> So here we are my first try to do a website, i can't belive it. <br> Wish me luck!</p>
+  <p>Hey this is me, Ana, 32 years old, mother of two boys.I'm from Republica Moldova, but for the moment i live in Italy. <br> I have a typical mother life. I <strong>love</strong> my life, but i needed to do something for myself. <br> So here we are my first try to do a website, i can't belive it. <br> Wish me luck!!!</p>
  </div>
 <div class="main-img">
  <img src="./imag2/1.jpg" alt="">
